[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Comic Sans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main Menu/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://Main Menu/Settings/Settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main Menu/background.png" type="Texture" id=4]
[ext_resource path="res://Main Menu/Speedrun Check.gd" type="Script" id=6]
[ext_resource path="res://Main Menu/BGMusic.mp3" type="AudioStream" id=7]
[ext_resource path="res://Main Menu/Debug.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.784314, 0.784314, 0.784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=27]

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/fonts/font = SubResource( 2 )
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 27 )
CheckBox/colors/font_color = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_focus = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckBox/fonts/font = SubResource( 28 )
CheckBox/styles/hover_pressed = SubResource( 29 )
CheckBox/styles/pressed = SubResource( 9 )
Label/fonts/font = SubResource( 30 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 12
outline_size = 1
outline_color = Color( 0, 1, 0, 1 )
font_data = ExtResource( 1 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Title Screen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Title" type="Label" parent="Title Screen"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 41.5
margin_right = 238.5
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "How To Rob A Gas Station"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Label" parent="Title Screen/Title"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -174.0
margin_right = 174.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 24 )
text = "Debug Mode "
align = 1
valign = 1
script = ExtResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="Title Screen"]
anchor_left = 2.75
anchor_top = 2.037
anchor_right = 5.25
anchor_bottom = 3.962
margin_top = 0.019989
margin_right = -1.52588e-05
margin_bottom = 0.019989

[node name="StartGame" type="Button" parent="Title Screen/VBoxContainer"]
margin_right = 99.0
margin_bottom = 23.0
text = "Start Game"

[node name="Speedrun Check" type="CheckBox" parent="Title Screen/VBoxContainer/StartGame"]
visible = false
margin_left = 106.0
margin_top = 0.499
margin_right = 186.0
margin_bottom = 23.499
custom_fonts/font = SubResource( 23 )
text = "Speedrun"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Title Screen/VBoxContainer"]
margin_top = 27.0
margin_right = 99.0
margin_bottom = 50.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="Title Screen/VBoxContainer"]
margin_top = 54.0
margin_right = 99.0
margin_bottom = 77.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Title Screen"]
anchor_top = 5.425
anchor_right = 1.4
anchor_bottom = 6.0
text = "Credits"

[node name="Settings" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BindInteract" parent="Settings/VBoxContainer/BindUse" index="1"]
items = [ "E", null, false, 0, null, "LMB", null, false, 1, null, "RMB", null, false, 2, null, "MMB", null, false, 3, null ]

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -24.0
margin_right = -2.0
margin_bottom = -1.0
text = "v2.3.2"
align = 1

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[connection signal="focus_entered" from="Title Screen/VBoxContainer/StartGame" to="." method="_on_StartGame_focus_entered"]
[connection signal="mouse_entered" from="Title Screen/VBoxContainer/StartGame" to="." method="_on_StartGame_mouse_entered"]
[connection signal="pressed" from="Title Screen/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="toggled" from="Title Screen/VBoxContainer/StartGame/Speedrun Check" to="." method="_on_Speedrun_Check_toggled"]
[connection signal="pressed" from="Title Screen/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Title Screen/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="Title Screen/Button" to="." method="_on_Button_pressed"]

[editable path="Settings"]
